--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,22 +1,37 @@
 @import "bootstrap";
 
 /* Home dividers */
-.leftdiv {
+.leftbar {
   float: left;
-  width: 20px;
+  width: 100px;
   height: 300px;
 }
 
-.middiv {
-}
-
-.rightdiv {
+.rightbar {
   float: right;
-  width: 20px;
+  width: 100px;
   height: 300px;
 }
 
-.home {
+.main {
   margin-top: 80px;
-  text-align: center;
+
+}
+
+.new_form {
+  width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  h1 {
+    text-align: center;
+  }
+  .new_location {
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+  }
+
 }
