--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,9 @@
 <header class="navbar navbar-fixed-top navbar-default">
   <div class="container">
 
-    <p> Hello, world! </p>
+    <h2>GoLocal</h2>
+
+
 
   </div>
 </header>
