--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,17 +6,19 @@
       <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
       <%= csrf_meta_tags %>
       <%= render 'layouts/shim' %>
+      <link href="http://fonts.googleapis.com/css?family=Arvo" rel="stylesheet" type="text/css">
+      <link href="http://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet" type="text/css">
   </head>
 
   <body>
     <%= render 'layouts/header' %> 
     <div class="container">
-      <div class="leftbar">
+      <div class="col-md-4">
       </div>
-      <div class="main">
+      <div class="col-md-4">
         <%= yield %>
       </div>
-      <div class="rightbar">
+      <div class="col-md-4">
       </div>
     </div>
   </body>
