--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -1,7 +1,7 @@
-<div class="new_form">
-  <h1>New Location</h1>
+
+  <h1><b>Bored?<b></h1>
   <br></br>
   <br></br>
   <%= render 'form' %>
 
-</div>
+
