further aesthetic changes

--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label 'Where are you,'+<i>'right now'</i>+'?' %><br>
+    <%= f.label 'Where are you,'+' right now'+'?' %><br>
     <%= f.text_field :address %>
   </div>
 
