fixed up location schema, working on search/sort process

--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -18,7 +18,7 @@
     <%= f.label 'Money?' %> <br>
     <%= radio_button_tag(:cost, "free") %>
     <%= label_tag("Free!") %>
-    <%= radio_button_tag(:cost, "a few dollars") %>
+    <%= radio_button_tag(:cost, "mid") %>
     <%= label_tag("a few dollars!") %>
     <%= radio_button_tag(:cost, "a lotta dollars") %>
     <%= label_tag("a lotta dollars!") %> <br>
@@ -34,7 +34,7 @@
     <%= f.label 'What ages?' %> <br>
     <%= radio_button_tag(:age, "family friendly") %>
     <%= label_tag("Family") %>
-    <%= radio_button_tag(:age, "over 21") %>
+    <%= radio_button_tag(:age, "mid") %>
     <%= label_tag("20-30") %>
     <%= radio_button_tag(:age, "all ages") %>
     <%= label_tag("Under 20") %> <br> <br>
