--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -13,11 +13,31 @@
 
   <div class="field">
     <%= f.label 'Where are you,'+' right now'+'?' %><br>
-    <%= f.text_field :address %> <br>
+    <%= f.text_field :address %> <br> 
 
-    <%= f.label 'Money' %>
+    <%= f.label 'How much $$$?' %> <br>
+    <%= f.label 'Free' %>
+    <%= f.radio_button :cost, "low" %>
+    <%= f.label 'A bit' %>
     <%= f.radio_button :cost, "mid" %>
+    <%= f.label 'A lot' %>
+    <%= f.radio_button :cost, "high" %> <br>
 
+    <%= f.label 'How many people?' %> <br>
+    <%= f.label 'A couple' %>
+    <%= f.radio_button :group_size, "low" %>
+    <%= f.label 'A few' %>
+    <%= f.radio_button :group_size, "mid" %>
+    <%= f.label 'A lot' %>
+    <%= f.radio_button :group_size, "high" %> <br>
+
+    <%= f.label 'What ages?' %> <br>
+    <%= f.label 'Under 21' %>
+    <%= f.radio_button :age, "low" %>
+    <%= f.label '21 & up' %>
+    <%= f.radio_button :age, "mid" %>
+    <%= f.label 'Family' %>
+    <%= f.radio_button :age, "high" %> <br>
   </div>
 
   <div class="actions">
