--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -2,26 +2,6 @@
 
 <h1>Listing Places</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Price</th>
-      <th>Activity</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @places.each do |place| %>
-      <tr>
-        <td><%= place.name %></td>
-
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
+<%= render @places %>
+<%= will_paginate @places %>
 <br>
-
-
