added background, made foreground transparent, fixed radio button spacing

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -2,11 +2,11 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Activities</h1>
-
+<div class="act_card">
 <%= render @activities %>
 <%= will_paginate @activities %>
+
 <br>
 
-<%= link_to 'New Activity', new_activity_path %>
 
-
+</div>
