--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="navbar navbar-fixed-top navbar-default">
   <div class="container">
 
-    <h2>GoLocal</h2>
+    <h2><%= link_to 'GoLocal', root_path %></h2>
 
 
 
