add more information to places

--- a/app/views/places/_place.html.erb
+++ b/app/views/places/_place.html.erb
@@ -1,3 +1,6 @@
-
-  <%= place.name %>
-
+  <h3> Name </h3>
+  <%= place.name %> <br>
+  <h3> Address </h3> 
+  <%= place.formatted_address %> <br>
+  <h3> Rating </h3>
+  <%= place.rating %> <br>
