adding cookie deleting functionality for activitie hash

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,9 +1,7 @@
 
 
 
-<h1>Listing Activities</h1>
-<br>
-<br>
+<h2><%= link_to 'GoLocal', root_path %></h2>
 
 <% current_page = cookies[:current_page].to_i %>
 <%= render @activities%>
