--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -1,7 +1,8 @@
 
-  <h1><b>Bored?<b></h1>
-  <br></br>
-  <br></br>
+  <h1><b>Want to go do something?<b></h1>
+  <br>
+  <br>
+
   <%= render 'form' %>
 
 
