--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,8 +1,8 @@
 
+<h2><%= link_to 'GoLocal', root_path %></h2>
 
-<h1>Listing Places</h1>
 <% if @places.empty? %>
-<p>Please be more specific. </p>
+<p>Please be more specific, or try again. </p>
 <% end %>
 <%= render @places %>
 <%= will_paginate @places %>
