--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -24,8 +24,10 @@ body {
 }
 
 .col-md-6 {
-  h1 {
+  h2 {
     text-align: center;
+    padding-bottom: 20%;
+    padding-top: 10%;
   }
 
   .new_location {
@@ -80,6 +82,9 @@ body {
         margin-right: 5px;
         margin-left: 5px;
       }
+    }
+    .act_submit {
+      padding-top: 20%;
     }
   }
 
