--- a/app/views/activities/_activity.html.erb
+++ b/app/views/activities/_activity.html.erb
@@ -18,9 +18,9 @@
 
 
 <div class="prev_button col-md-2">
-<button type="button" class="btn btn-dfault btn-lnk">
-<%= link_to "PREVIOUS!!!", activities_path(page: prev_page) %>
-</button>
+
+<%= link_to "PREVIOUS!!!", activities_path(page: prev_page), :class=>"btn btn-default" %>
+
 </div>
 <div class="act_card col-md-8">
 
@@ -28,13 +28,11 @@
 <br>
 <%= image_tag activity.image_path, size: "500x320", alt: activity.image_alt %>
 <br> <br>
-<%= link_to 'Yes! This one!', places_path %> <br>
+<%= link_to 'Yes! This one!', places_path, :class=>"btn btn-default act-submit" %> <br>
 <% cookies[:activity_id] = { value: activity.id.to_s, expires: 1.hour.from_now } %>
 
 </div>
 <div class="next_button col-md-2">
-<button type="button" class="btn btn-dfault">
-<%= link_to "NEXT!!!", activities_path(page: next_page) %>
-</button>
+<%= link_to "NEXT!!!", activities_path(page: next_page), :class=>"btn btn-default" %>
 </div>
 
