--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,12 +1,12 @@
 
 
 
-<h2><%= link_to 'GoLocal', root_path %></h2>
+<h2>Activity</h2>
 
+<div class="act-card">
 <% current_page = cookies[:current_page].to_i %>
 <%= render @activities%>
+</div>
 
-
-<br>
 
 
